// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavigationBar > renders no navigation items and no user 1`] = `
<div
  class="ds-min-w-min ds-shadow-border ds-bg-white"
>
  <nav
    class="ds-mx-auto ds-flex ds-h-[56px] ds-items-center ds-justify-between ds-gap-4 ds-px-7 ds-py-3 ds-font-semibold lg:ds-container"
    role="navigation"
  >
    <div>
      logo
    </div>
    <ul
      class="ds-inline-flex ds-items-center ds-gap-3 sm:ds-gap-5"
    >
      <li
        class="ds-ml-5"
      >
        <button
          class="ds-flex ds-h-8 ds-w-8 ds-items-center ds-justify-center ds-rounded-full ds-bg-bg-gray-2"
        >
          <span
            class="material-symbols-outlined size-24 ds-select-none ds-text-black"
          >
            language
          </span>
        </button>
      </li>
      <li>
        <a
          class="ds-flex ds-h-8 ds-w-8 ds-items-center ds-justify-center ds-rounded-full ds-bg-bg-gray-2"
          href="/login"
        >
          <span
            class="material-symbols-outlined size-24 ds-select-none ds-text-black"
          >
            person
          </span>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavigationBar > renders only user 1`] = `
<div
  class="ds-min-w-min ds-shadow-border ds-bg-white"
>
  <nav
    class="ds-mx-auto ds-flex ds-h-[56px] ds-items-center ds-justify-between ds-gap-4 ds-px-7 ds-py-3 ds-font-semibold lg:ds-container"
    role="navigation"
  >
    <div>
      logo
    </div>
    <ul
      class="ds-inline-flex ds-items-center ds-gap-3 sm:ds-gap-5"
    >
      <li
        class="ds-ml-5"
      >
        <button
          class="ds-flex ds-h-8 ds-w-8 ds-items-center ds-justify-center ds-rounded-full ds-bg-bg-gray-2"
        >
          <span
            class="material-symbols-outlined size-24 ds-select-none ds-text-black"
          >
            language
          </span>
        </button>
      </li>
      <li>
        <a
          aria-label="Profile"
          class="ds-flex ds-h-8 ds-w-8 ds-items-center ds-justify-center ds-rounded-full ds-bg-secondary-3 ds-text-white"
          href="/profile"
          role="img"
          title="Reetta Räppänä"
        >
          RR
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
